objects/ServiceAppointment.object
<CustomObject>
    <fields>
        <fullName>AppointmentUrlFormula__c</fullName>
        <description>SE: please change the url of this field to match your community domain name. Replace &lt;yourcommunitydomain&gt; with your actual community domain in both occurrences. The formula should look something like:

if(text($User.UserType)  = &apos;Guest&apos;,
HYPERLINK(&quot;https://sdodemo-main-166ce2cf6b6-172-17bdfda91fe.force.com/professional/s/guestrescheduling?anum=&quot; &amp; AppointmentNumber , &quot;Appointment Link&quot;), 
HYPERLINK(&quot;https://sdodemo-main-166ce2cf6b6-172-17bdfda91fe.force.com/professional/s/serviceappointment/&quot; &amp;  Id  , &quot;Appointment Link&quot;))</description>
        <formula>if(text($User.UserType)  = &apos;Guest&apos;,
HYPERLINK(&quot;https://&lt;yourcommunitydomain&gt;.force.com/professional/s/guestrescheduling?anum=&quot; &amp; AppointmentNumber , &quot;Appointment Link&quot;), 
HYPERLINK(&quot;https://&lt;yourcommunitydomain&gt;.force.com/professional/s/scheduler-appointment?Id=&quot; &amp;  Id  , &quot;Appointment Link&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>&lt;yourcommunitydomain&gt;</inlineHelpText>
        <label>AppointmentUrlFormula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Service Appointments</relationshipLabel>
        <relationshipName>Service_Appointments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Customer_NPS__c</fullName>
        <label>Customer NPS</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <description>Used by Data Packs to identify and update records.</description>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>FINS_Q_Branch_Demo_Reference__c</fullName>
        <description>Field choice selection indicates that the corresponding record is referenced in one or more official Q-Branch demo guides.</description>
        <label>Q-Branch Demo Reference</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>FINS_Q_Branch_Demo_Guide</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>FSLDemoTools_AR_Actual_Travel_Time__c</fullName>
        <label>FSLDemoTools AR Actual Travel Time</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSLDemoTools_Service_Resource__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service Resource</label>
        <referenceTo>ServiceResource</referenceTo>
        <relationshipLabel>Service Appointments</relationshipLabel>
        <relationshipName>Service_Appointments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FSLDemoTools_Wave_Data__c</fullName>
        <defaultValue>false</defaultValue>
        <description>this field is used to protect the wave data set from the FSL Demo Tools Restore Utility</description>
        <label>FSLDemoTools Wave Data</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FSLDemoTools_Wave_Week__c</fullName>
        <label>FSLDemoTools Wave Week</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FSL_Compliance__c</fullName>
        <formula>If( ActualEndTime &lt; DueDate , 1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Compliance</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSL_FTFR_Count__c</fullName>
        <description>Sets the value of the field to 0 if status is &apos;Cannot Complete&apos;. This field is used in Service Manager report to calculate First Time Fix Rate value</description>
        <formula>IF(ISPICKVAL(Status,&apos;Cannot Complete&apos;),0,100)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FTFR Count</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSL__Appointment_Grade__c</fullName>
        <label>Appointment Grade</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSL__Auto_Schedule__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Auto Schedule</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FSL__Duration_In_Minutes__c</fullName>
        <formula>IF (ISBLANK(SchedStartTime), 0, (SchedEndTime - SchedStartTime)*24*60)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Scheduled Duration</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSL__Emergency__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Emergency</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FSL__GanttColor__c</fullName>
        <label>Gantt Color</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSL__GanttIcon__c</fullName>
        <inlineHelpText>Enter a URL for an icon. The URL must end in an image suffix, such as .png.</inlineHelpText>
        <label>Gantt Icon</label>
        <length>2048</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FSL__GanttLabel__c</fullName>
        <label>Gantt Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSL__Gantt_Display_Date__c</fullName>
        <label>Gantt Display Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>FSL__InJeopardyReason__c</fullName>
        <label>In Jeopardy Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Delayed Start</fullName>
                </value>
                <value>
                    <fullName>Delayed Finish</fullName>
                </value>
                <value>
                    <fullName>No Response</fullName>
                </value>
                <value>
                    <fullName>Due Date Approaching</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FSL__InJeopardy__c</fullName>
        <defaultValue>false</defaultValue>
        <label>In Jeopardy</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FSL__InternalSLRGeolocation__c</fullName>
        <label>Internal SLR Geolocation</label>
        <scale>6</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>FSL__IsFillInCandidate__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Is Fill In Candidate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FSL__IsMultiDay__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is MultiDay</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FSL__Last_Updated_Epoch__c</fullName>
        <label>Last Updated Epoch</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSL__MDS_Calculated_length__c</fullName>
        <label>Multiday Work Calculated length</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSL__MDT_Operational_Time__c</fullName>
        <label>Multiday Work Operational Time</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FSL__Pinned__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Pinned</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FSL__Prevent_Geocoding_For_Chatter_Actions__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Prevent Geocoding For Chatter Actions</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FSL__Related_Service__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Service</label>
        <referenceTo>ServiceAppointment</referenceTo>
        <relationshipLabel>Service Appointments</relationshipLabel>
        <relationshipName>Service_Appointments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FSL__Same_Day__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Same Day</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FSL__Same_Resource__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Same Resource</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FSL__Schedule_Mode__c</fullName>
        <label>Schedule Mode</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Manual</fullName>
                </value>
                <value>
                    <fullName>Automatic</fullName>
                </value>
                <value>
                    <fullName>Optimization</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                    <default>true</default>
                    <label>None</label>
                </value>
                <value>
                    <fullName>Drag and Drop</fullName>
                </value>
                <value>
                    <fullName>Schedule</fullName>
                </value>
                <value>
                    <fullName>Global Optimization</fullName>
                </value>
                <value>
                    <fullName>In Day Optimization</fullName>
                </value>
                <value>
                    <fullName>Resource Optimization</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FSL__Schedule_over_lower_priority_appointment__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Schedule Over Lower Priority Appointment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FSL__Scheduling_Policy_Used__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Scheduling Policy Used</label>
        <referenceTo>FSL__Scheduling_Policy__c</referenceTo>
        <relationshipLabel>Service Appointments</relationshipLabel>
        <relationshipName>Service_Appointments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FSL__Time_Dependency__c</fullName>
        <label>Time Dependency</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Same Start</fullName>
                </value>
                <value>
                    <fullName>Start After Finish</fullName>
                </value>
                <value>
                    <fullName>Finish Before Start</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FSL__UpdatedByOptimization__c</fullName>
        <defaultValue>false</defaultValue>
        <label>UpdatedByOptimization</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FSL__Use_Async_Logic__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Use Async Logic</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FSL__Virtual_Service_For_Chatter_Action__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Virtual Service For Chatter Action (SLR)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FSSK__FSK_Add_Asset_to_Maintenance_Plan__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Add the installed Asset to the account maintenance plan upon completion</inlineHelpText>
        <label>Add Asset to Account Maintenance Plan</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FSSK__FSK_Assigned_Service_Resource__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field stores the assign resource relates to the Service Appointment</description>
        <label>Assigned Service Resource</label>
        <referenceTo>ServiceResource</referenceTo>
        <relationshipLabel>Service Appointments</relationshipLabel>
        <relationshipName>Service_Appointments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FSSK__FSK_Mobile_End_Time__c</fullName>
        <label>Mobile End Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>FSSK__FSK_Mobile_Start_Time__c</fullName>
        <label>Mobile Start Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>FSSK__FSK_Planned_Scheduled_End__c</fullName>
        <label>Planned Scheduled End</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>FSSK__FSK_Planned_Scheduled_Start__c</fullName>
        <description>This field stores the original Scheduled Start Time</description>
        <label>Planned Scheduled Start</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>FSSK__FSK_Reject_Service_Appointment__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Reject Service Appointment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FSSK__FSK_Work_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Work Order</label>
        <referenceTo>WorkOrder</referenceTo>
        <relationshipLabel>Service Appointments</relationshipLabel>
        <relationshipName>FSK_Service_Appointments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <description>added this field to support inbound guest appointment with confirmation email. it gets set by the sdo new inbound guest appointment flow</description>
        <label>First Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LSDemoTools_Master_Data__c</fullName>
        <defaultValue>false</defaultValue>
        <label>LSDemoTools Master Data</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LSM_OwnerId__c</fullName>
        <label>OwnerId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Open_Opportunity_Value__c</fullName>
        <formula>Contact.Account.SDO_Sales_Open_Oppty_Value__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Open Opportunity Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Parent_Work_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Work Order</label>
        <referenceTo>WorkOrder</referenceTo>
        <relationshipLabel>Service Appointments</relationshipLabel>
        <relationshipName>Service_Appointments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Related_Contractor_Appointment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Contractor Appointment</label>
        <referenceTo>ServiceAppointment</referenceTo>
        <relationshipLabel>Service Appointments (Related Contractor Appointment)</relationshipLabel>
        <relationshipName>Related_Contractor_Appointments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Requires_Contractor__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Requires Contractor</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Rider_ContactFirstName__c</fullName>
        <description>A reference to the Contact&apos;s First Name</description>
        <formula>Contact.FirstName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>A reference to the Contact&apos;s First Name</inlineHelpText>
        <label>Rider Contact FirstName</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rider_ServiceReport_URL__c</fullName>
        <description>URL to public service report</description>
        <inlineHelpText>URL to public service report</inlineHelpText>
        <label>Rider Service Report URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rider_StartTime__c</fullName>
        <label>Rider StartTime</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Running_Late_in_mins__c</fullName>
        <label>Running Late (in mins)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>15</fullName>
                </value>
                <value>
                    <fullName>30</fullName>
                </value>
                <value>
                    <fullName>45</fullName>
                </value>
                <value>
                    <fullName>60</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SDO_SFS_Tracker_Resource_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Tracker Assigned Resource Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Service Appointments (Those Assigned to Resource)</relationshipLabel>
        <relationshipName>Service_Appointments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SDO_SFS_Tracker_StartTime__c</fullName>
        <label>Tracker StartTime</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SDO_Tool_FSLDemoTools_Master_Data__c</fullName>
        <defaultValue>false</defaultValue>
        <label>FSLDemoTools Master Data</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SDO_Tool_Service_Crew__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Service Crew</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SchEndDateFormatted__c</fullName>
        <description>Einstein Chatbot formatted field</description>
        <formula>CASE(MONTH(DATEVALUE( SchedEndTime )), 
1, &quot;January&quot;, 
2, &quot;February&quot;, 
3, &quot;March&quot;, 
4, &quot;April&quot;, 
5, &quot;May&quot;, 
6, &quot;June&quot;, 
7, &quot;July&quot;, 
8, &quot;August&quot;, 
9, &quot;September&quot;, 
10, &quot;October&quot;, 
11, &quot;November&quot;, 
12, &quot;December&quot;, 
&quot;None&quot;) 

&amp; &apos; &apos; &amp; 

TEXT(Day(DATEVALUE(SchedEndTime))) 

&amp; &apos;, &apos; &amp; 

TEXT(Year(DATEVALUE(SchedEndTime)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SchEndDateFormatted</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SchEndTimeFormatted__c</fullName>
        <description>Einstein Chatbot formatted field</description>
        <formula>TEXT(IF( OR( VALUE( MID( TEXT( SchedEndTime - (7/24) ), 12, 2 ) ) = 0, VALUE( MID( TEXT( SchedEndTime - (7/24) ), 12, 2 ) ) = 12 ), 12, VALUE( MID( TEXT( SchedEndTime - (7/24) ), 12, 2 ) ) - IF( VALUE( MID( TEXT( SchedEndTime - (7/24) ), 12, 2 ) ) &lt; 12, 0, 12 ) )) 

&amp; &apos;:&apos; &amp; 
Right(&apos;0&apos; &amp; TEXT(VALUE( MID( TEXT( SchedEndTime - (7/24) ), 15, 2 ) )), 2) 

&amp; &apos; &apos; &amp; 
IF( VALUE( MID( TEXT( SchedEndTime - (7/24) ), 12, 2 ) ) &lt; 12, &quot;AM&quot;, &quot;PM&quot; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SchEndTimeFormatted</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SchStartDateFormatted__c</fullName>
        <description>Einstein Chatbot formatted field</description>
        <formula>CASE(MONTH(DATEVALUE(SchedStartTime)), 
1, &quot;January&quot;, 
2, &quot;February&quot;, 
3, &quot;March&quot;, 
4, &quot;April&quot;, 
5, &quot;May&quot;, 
6, &quot;June&quot;, 
7, &quot;July&quot;, 
8, &quot;August&quot;, 
9, &quot;September&quot;, 
10, &quot;October&quot;, 
11, &quot;November&quot;, 
12, &quot;December&quot;, 
&quot;None&quot;) 

&amp; &apos; &apos; &amp; 

TEXT(Day(DATEVALUE(SchedStartTime))) 

&amp; &apos;, &apos; &amp; 

TEXT(Year(DATEVALUE(SchedStartTime)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SchStartDateFormatted</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SchStartTimeFormatted__c</fullName>
        <description>Einstein Chatbot formatted field</description>
        <formula>TEXT(IF( OR( VALUE( MID( TEXT( SchedStartTime - (8/24) ), 12, 2 ) ) = 0, VALUE( MID( TEXT( SchedStartTime - (8/24) ), 12, 2 ) ) = 12 ), 12, VALUE( MID( TEXT( SchedStartTime - (8/24) ), 12, 2 ) ) - IF( VALUE( MID( TEXT( SchedStartTime - (8/24) ), 12, 2 ) ) &lt; 12, 0, 12 ) )) 

&amp; &apos;:&apos; &amp; 
Right(&apos;0&apos; &amp; TEXT(VALUE( MID( TEXT( SchedStartTime - (8/24) ), 15, 2 ) )), 2) 

&amp; &apos; &apos; &amp; 
IF( VALUE( MID( TEXT( SchedStartTime - (8/24) ), 12, 2 ) ) &lt; 12, &quot;AM&quot;, &quot;PM&quot; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SchStartTimeFormatted</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Territory_Name__c</fullName>
        <formula>ServiceTerritory.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Service Territory Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Site_Inspection__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Site Inspection</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Tech_Color__c</fullName>
        <description>This field is used within a custom gantt pallet to identify the service resource the appointment was originally scheduled to before optimization was run. Post optimization it creates a nice visualization of the optimizer at work.</description>
        <label>Tech Color</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Why_Not_Alt1_Candidates__c</fullName>
        <label>Why Not Alt1 Candidates</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Why_Not_Alt1_Count__c</fullName>
        <label>Why Not Alt1 Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Why_Not_Alt2_Candidates__c</fullName>
        <label>Why Not Alt2 Candidates</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Why_Not_Alt2_Count__c</fullName>
        <label>Why Not Alt2 Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Why_Not_Alt3_Candidates__c</fullName>
        <label>Why Not Alt3 Candidates</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Why_Not_Alt3_Count__c</fullName>
        <label>Why Not Alt3 Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Why_Not_Last_Run__c</fullName>
        <label>Why Not Last Run</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Why_Not_Main_Candidates__c</fullName>
        <label>Why Not Main Candidates</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Why_Not_Main_Count__c</fullName>
        <label>Why Not Main Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Why_Not_NoAvail_Candidates__c</fullName>
        <label>Why Not NoAvail Candidates</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Why_Not_NoAvail_Count__c</fullName>
        <label>Why Not NoAvail Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Work_Acceptance_Status__c</fullName>
        <label>Work Acceptance Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Accept</fullName>
                </value>
                <value>
                    <fullName>Reject</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Work_Type_Group_Name__c</fullName>
        <formula>Work_Type_Group__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Chronos Bot Work Type Group Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Work_Type_Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Chronos Bot Work Type Group</label>
        <referenceTo>WorkTypeGroup</referenceTo>
        <relationshipLabel>Service Appointments</relationshipLabel>
        <relationshipName>Service_Appointments</relationshipName>
        <type>Lookup</type>
    </fields>
    <listViews>
        <fullName>All_ServiceAppointments</fullName>
        <columns>Name</columns>
        <columns>SchedStartTime</columns>
        <columns>SchedEndTime</columns>
        <columns>ServiceTerritory</columns>
        <columns>Status</columns>
        <columns>WorkTypeName</columns>
        <columns>WorkType</columns>
        <columns>AdditionalInformation</columns>
        <columns>Account</columns>
        <columns>ParentRecord</columns>
        <filterScope>Everything</filterScope>
        <label>All Service Appointments</label>
    </listViews>
    <listViews>
        <fullName>All_ServiceAppointments</fullName>
        <columns>Name</columns>
        <columns>EstDuration</columns>
        <columns>Status</columns>
        <columns>Subject</columns>
        <columns>LSDemoTools_Master_Data__c</columns>
        <columns>SchedStartTime</columns>
        <columns>SchedEndTime</columns>
        <columns>FSL__Schedule_Mode__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Service Appointments</label>
    </listViews>
    <listViews>
        <fullName>FieldServiceMobile</fullName>
        <booleanFilter>1 OR 2</booleanFilter>
        <columns>Subject</columns>
        <columns>Status</columns>
        <columns>Contact</columns>
        <columns>Name</columns>
        <filterScope>AssignedToMe</filterScope>
        <filters>
            <field>SchedStartTime</field>
            <operation>equals</operation>
            <value>LAST_N_DAYS:14</value>
        </filters>
        <filters>
            <field>SchedStartTime</field>
            <operation>equals</operation>
            <value>NEXT_N_DAYS:30</value>
        </filters>
        <label>FieldServiceMobile</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>MyPendingAppointments</fullName>
        <columns>Name</columns>
        <columns>SchedStartTime</columns>
        <columns>SchedEndTime</columns>
        <columns>ServiceTerritory</columns>
        <columns>Status</columns>
        <columns>WorkTypeName</columns>
        <columns>WorkType</columns>
        <columns>AdditionalInformation</columns>
        <columns>Account</columns>
        <columns>ParentRecord</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>SchedStartTime</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>StatusCategory</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>My Pending Service Appointments</label>
    </listViews>
    <listViews>
        <fullName>MyPendingAppointments</fullName>
        <columns>Name</columns>
        <columns>SchedStartTime</columns>
        <columns>SchedEndTime</columns>
        <columns>ServiceTerritory</columns>
        <columns>Status</columns>
        <columns>WorkType</columns>
        <columns>Account</columns>
        <columns>ParentRecord</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>SchedStartTime</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>StatusCategory</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>My Pending Service Appointments</label>
    </listViews>
    <listViews>
        <fullName>MyScheduledAppointments</fullName>
        <columns>Name</columns>
        <columns>SchedStartTime</columns>
        <columns>SchedEndTime</columns>
        <columns>ServiceTerritory</columns>
        <columns>Status</columns>
        <columns>WorkTypeName</columns>
        <columns>WorkType</columns>
        <columns>AdditionalInformation</columns>
        <columns>Account</columns>
        <columns>ParentRecord</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>SchedStartTime</field>
            <operation>greaterOrEqual</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>StatusCategory</field>
            <operation>notEqual</operation>
            <value>6,4,5</value>
        </filters>
        <label>My Scheduled Service Appointments</label>
    </listViews>
    <listViews>
        <fullName>MyScheduledAppointments</fullName>
        <columns>Name</columns>
        <columns>SchedStartTime</columns>
        <columns>SchedEndTime</columns>
        <columns>ServiceTerritory</columns>
        <columns>Status</columns>
        <columns>WorkType</columns>
        <columns>Account</columns>
        <columns>ParentRecord</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>SchedStartTime</field>
            <operation>greaterOrEqual</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>StatusCategory</field>
            <operation>notEqual</operation>
            <value>6,4,5</value>
        </filters>
        <label>My Scheduled Service Appointments</label>
    </listViews>
    <listViews>
        <fullName>MyUnScheduledAppointments</fullName>
        <columns>Name</columns>
        <columns>SchedStartTime</columns>
        <columns>SchedEndTime</columns>
        <columns>ServiceTerritory</columns>
        <columns>Status</columns>
        <columns>WorkType</columns>
        <columns>Account</columns>
        <columns>LatestEndTime</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>StatusCategory</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>LatestEndTime</field>
            <operation>greaterOrEqual</operation>
            <value>TODAY</value>
        </filters>
        <label>Unassigned Visits</label>
    </listViews>
    <listViews>
        <fullName>My_ServiceAppointments</fullName>
        <columns>Name</columns>
        <columns>ParentRecord</columns>
        <columns>ParentRecordType</columns>
        <columns>Status</columns>
        <columns>ArrivalWindowStartTime</columns>
        <columns>ArrivalWindowEndTime</columns>
        <filterScope>Mine</filterScope>
        <label>My Service Appointments</label>
        <language>en_US</language>
        <sharedTo>
            <allCustomerPortalUsers></allCustomerPortalUsers>
            <allInternalUsers></allInternalUsers>
            <allPartnerUsers></allPartnerUsers>
        </sharedTo>
    </listViews>
</CustomObject>